<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.cash.CashFragment_OpenShift">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Open Shift when all entries are inserted and verified"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAmount"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="20dp"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:helperText="@string/helper_text"
        app:layout_constraintBottom_toTopOf="@+id/tilObs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:startIconDrawable="@drawable/baseline_monetization_on_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/accs_menulist"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="21dp"
        app:layout_constraintEnd_toStartOf="@+id/addBtn"
        app:layout_constraintStart_toEndOf="@+id/tilAmount"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilObs"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilAmount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiObs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/obs" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvShiftDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilObs"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="110dp"
        android:text="@string/shiftDetails"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tilAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addBtn"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="79dp"
        android:layout_marginBottom="649dp"
        android:text="PUT"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/accs_menulist"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/colorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/remBtn"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="135dp"
        android:insetBottom="0dp"
        android:text="REMOVE CURRENCY"
        android:textSize="15dp"
        app:layout_constraintEnd_toStartOf="@+id/tilAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShiftDetails"
        app:strokeColor="@color/colorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/openShiftBtn"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="362dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="362dp"
        android:insetBottom="0dp"
        android:text="Open Shift"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilObs"
        app:strokeColor="@color/colorPrimary" />
</androidx.constraintlayout.widget.ConstraintLayout>